fix dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-color: theme('colors.white');
-    --background-color: theme('colors.black');
+    --background-color: theme('colors.off-black');
   }
 }
 
